# ai_police

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  Dockerfile  ETHICAL-GUIDELINES.md  LICENSE  LICENSE.md  MAINTENANCE.md  POLICE-DEPARTMENTS-NOTE.md  PRIVACY.md  README.md  SAFETY.md  SECURITY.md  copilot-instructions.md  docker-compose.yml  grok.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: research-brief.md  safeguards-update.md
.github/workflows/: ci.yml  container.yml  release.yml
db/schema/: mariadb.sql  postgresql.sql
docs/: api.md  architecture.md  certification-and-compliance.md  configuration.md  country-adaptation-notes.md  database-support.md  decision-logic.md  deploy-azure.md  deploy-linux-vps.md  deploy-platforms.md  deployment-options.md  development.md  evaluation-metrics.md  faq.md  future-exploration.md  github-publish-checklist.md  government-readiness.md  jurisdiction-adaptation-matrix.md  launch-kit.md  local-verification.md  project-structure.md  public-interest-use-cases.md  public-note-es-mx.md  public-note-hi.md  public-note-mr.md  quickstart.md  references.md  release-notes-v0.1.0.md  release-runbook.md  roadmap.md  runtime-configuration.md  safeguards-by-design.md  social-risk-landscape.md  troubleshooting.md
jurisdiction-profiles/: conflict-civilian-protection.json  india-support.json  us-support.json
scripts/: preflight.py
tests/: test_api.py  test_cli.py  test_config.py  test_database.py  test_service.py  test_settings.py  test_triage.py
web/: index.html
(+28 files in other folders)
