[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-police"
version = "0.1.0"
description = "Public-interest governance scaffolding for support-first AI triage and audit workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0"
]
license = { file = "LICENSE" }
authors = [
  { name = "AI Police contributors" }
]
keywords = ["public-interest", "safety", "triage", "audit", "governance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "psycopg[binary]>=3.2",
  "pymysql>=1.1"
]
db = [
  "psycopg[binary]>=3.2",
  "pymysql>=1.1"
]
postgres = [
  "psycopg[binary]>=3.2"
]
mysql = [
  "pymysql>=1.1"
]
mariadb = [
  "pymysql>=1.1"
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "psycopg[binary]>=3.2",
  "pymysql>=1.1"
]

[project.scripts]
ai-police = "ai_police.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
